# uni-rag

./: .env.example  AGENTS.md  README.md  docker-compose.yml  init.sql  result.json
app/: Dockerfile  README.md  alembic.ini  app_main.py  pyproject.toml  requirements.txt  start.sh
app/alembic/: env.py
app/alembic/versions/: 2a1ba2b9db7b_session加上更新字段.py  3b8f2a4c91d0_create_document_uploads.py  7f2d4c9b1a6e_align_messages_history_fields.py  980b32f130df_baseline_existing_init_sql_schema.py  ee6fda53681d_messages字段更新.py
app/exceptions/: auth.py
app/models/: __init__.py  document_upload.py  knowledgebase.py  message.py  session.py  user.py
app/router/: chat_rt.py  history_rt.py  user_rt.py
app/schemas/: chat.py  document_upload.py  message.py  user.py
app/service/: auth.py  document_operations.py  document_upload_service.py  quick_parse_service.py  session_service.py
app/service/core/: chat.py  file_parser.py  retrieval.py
app/service/core/deepdoc/: DEEPDOC_ANALYSIS.md  deepdoc_analysis.html
app/service/core/rag/app/: naive.py
app/service/core/rag/nlp/: model.py
app/service/core/rag/utils/: es_conn.py
app/utils/: __init__.py  database.py  get_logger.py  password.py
