[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beartype>=0.22.9",
    "chardet>=7.4.3",
    "html-text>=0.7.1",
    "huggingface-hub>=1.16.1",
    "markdown>=3.10.2",
    "numpy>=2.4.6",
    "onnxruntime>=1.26.0",
    "opencv-python>=4.13.0.92",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pdfplumber>=0.11.9",
    "pillow>=12.2.0",
    "pyclipper>=1.4.0",
    "pypdf>=6.12.1",
    "python-docx>=1.2.0",
    "python-pptx>=1.0.2",
    "readability-lxml>=0.8.4.1",
    "shapely>=2.1.2",
    "tika>=3.1.0",
    "xgboost<3.1",
]
